--- a/assets/src/input.css
+++ b/assets/src/input.css
@@ -51,6 +51,87 @@ img {
   background: #5F4586;
 }
 
+/* Preloader */
+#loader-wrapper {
+    opacity: 1;
+    visibility: visible;
+}
+
+#loader-wrapper.hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+@media (max-width: 768px){
+  #loader-wrapper h1 {
+    -webkit-text-stroke: 1px #395B99;
+  }
+}
+#loader-wrapper h1 {
+  -webkit-text-stroke: 3px #395B99;
+}
+.snowflake {
+  --small: 3px;
+  --medium: 7px;
+  width: var(--small);
+  height: var(--small);
+  position: absolute;
+  background-color: #fff;
+  border-radius: 50%;
+  animation: snow 6s linear infinite, wind 10s ease-in-out infinite;
+  top: -2%;
+  left: 10%;
+}
+
+.snowflake:nth-child(2n + 1) {
+  /* 3, 5, 7, ... */
+  width: var(--medium);
+  height: var(--medium);
+}
+
+.snowflake:nth-child(1)  { left: 5%; animation-delay: 0s; }
+.snowflake:nth-child(2)  { left: 10%; animation-delay: 1s; }
+.snowflake:nth-child(3)  { left: 15%; animation-delay: 2s; }
+.snowflake:nth-child(4)  { left: 20%; animation-delay: 0.5s; }
+.snowflake:nth-child(5)  { left: 25%; animation-delay: 2.5s; }
+.snowflake:nth-child(6)  { left: 30%; animation-delay: 1.5s; }
+.snowflake:nth-child(7)  { left: 35%; animation-delay: 3s; }
+.snowflake:nth-child(8)  { left: 40%; animation-delay: 2s; }
+.snowflake:nth-child(9)  { left: 45%; animation-delay: 4s; }
+.snowflake:nth-child(10) { left: 50%; animation-delay: 3.5s; }
+.snowflake:nth-child(11) { left: 55%; animation-delay: 1s; }
+.snowflake:nth-child(12) { left: 60%; animation-delay: 2s; }
+.snowflake:nth-child(13) { left: 65%; animation-delay: 1.2s; }
+.snowflake:nth-child(14) { left: 70%; animation-delay: 3.1s; }
+.snowflake:nth-child(15) { left: 75%; animation-delay: 0.6s; }
+.snowflake:nth-child(16) { left: 80%; animation-delay: 1.7s; }
+.snowflake:nth-child(17) { left: 85%; animation-delay: 2.8s; }
+.snowflake:nth-child(18) { left: 90%; animation-delay: 3.3s; }
+.snowflake:nth-child(19) { left: 95%; animation-delay: 0.9s; }
+.snowflake:nth-child(20) { left: 98%; animation-delay: 1.1s; }
+.snowflake:nth-child(21) { left: 3%; animation-delay: 2.1s; }
+.snowflake:nth-child(22) { left: 7%; animation-delay: 2.6s; }
+.snowflake:nth-child(23) { left: 13%; animation-delay: 3.6s; }
+.snowflake:nth-child(24) { left: 18%; animation-delay: 4.2s; }
+.snowflake:nth-child(25) { left: 22%; animation-delay: 5s; }
+.snowflake:nth-child(26) { left: 27%; animation-delay: 4.7s; }
+.snowflake:nth-child(27) { left: 33%; animation-delay: 3.3s; }
+.snowflake:nth-child(28) { left: 38%; animation-delay: 4.5s; }
+.snowflake:nth-child(29) { left: 43%; animation-delay: 5.5s; }
+.snowflake:nth-child(30) { left: 48%; animation-delay: 4.9s; }
+
+@keyframes snow {
+  100% {
+    top: 100%;
+  }
+}
+
+@keyframes wind {
+  50% {
+    transform: translateX(120px);
+  }
+}
+/* Preloader */
+
 /* Navbar CSS */
 @keyframes atom-rotate {
   0% {
