--- a/assets/src/output.css
+++ b/assets/src/output.css
@@ -43,6 +43,7 @@
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
     --font-weight-extrabold: 800;
+    --tracking-tighter: -0.05em;
     --tracking-wide: 0.025em;
     --radius-2xl: 1rem;
     --radius-3xl: 1.5rem;
@@ -215,8 +216,14 @@
   }
 }
 @layer utilities {
+  .visible {
+    visibility: visible;
+  }
   .absolute {
     position: absolute;
+  }
+  .fixed {
+    position: fixed;
   }
   .relative {
     position: relative;
@@ -269,14 +276,8 @@
   .-bottom-3 {
     bottom: calc(var(--spacing) * -3);
   }
-  .-bottom-5 {
-    bottom: calc(var(--spacing) * -5);
-  }
   .-bottom-8 {
     bottom: calc(var(--spacing) * -8);
-  }
-  .-bottom-10 {
-    bottom: calc(var(--spacing) * -10);
   }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
@@ -290,12 +291,6 @@
   .bottom-15 {
     bottom: calc(var(--spacing) * 15);
   }
-  .-left-1 {
-    left: calc(var(--spacing) * -1);
-  }
-  .-left-1\/2 {
-    left: calc(calc(1/2 * 100%) * -1);
-  }
   .-left-3 {
     left: calc(var(--spacing) * -3);
   }
@@ -304,12 +299,6 @@
   }
   .left-0 {
     left: calc(var(--spacing) * 0);
-  }
-  .left-1 {
-    left: calc(var(--spacing) * 1);
-  }
-  .left-1\/2 {
-    left: calc(1/2 * 100%);
   }
   .left-8 {
     left: calc(var(--spacing) * 8);
@@ -352,6 +341,9 @@
   }
   .z-25 {
     z-index: 25;
+  }
+  .z-9999 {
+    z-index: 9999;
   }
   .z-\[999\] {
     z-index: 999;
@@ -443,9 +435,6 @@
   .inline-block {
     display: inline-block;
   }
-  .table {
-    display: table;
-  }
   .h-10 {
     height: calc(var(--spacing) * 10);
   }
@@ -472,9 +461,6 @@
   }
   .h-full {
     height: 100%;
-  }
-  .w-5 {
-    width: calc(var(--spacing) * 5);
   }
   .w-5\/6 {
     width: calc(5/6 * 100%);
@@ -548,14 +534,8 @@
   .max-w-\[580px\] {
     max-width: 580px;
   }
-  .flex-shrink {
-    flex-shrink: 1;
-  }
   .shrink-0 {
     flex-shrink: 0;
-  }
-  .border-collapse {
-    border-collapse: collapse;
   }
   .origin-center {
     transform-origin: center;
@@ -563,24 +543,8 @@
   .origin-left {
     transform-origin: left;
   }
-  .-translate-x-1 {
-    --tw-translate-x: calc(var(--spacing) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .-translate-x-1\/2 {
-    --tw-translate-x: calc(calc(1/2 * 100%) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
   .-translate-x-75 {
     --tw-translate-x: calc(var(--spacing) * -75);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-x-1 {
-    --tw-translate-x: calc(var(--spacing) * 1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-x-1\/2 {
-    --tw-translate-x: calc(1/2 * 100%);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .transform {
@@ -652,10 +616,6 @@
   .rounded-full {
     border-radius: calc(infinity * 1px);
   }
-  .border {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
-  }
   .border-t-2 {
     border-top-style: var(--tw-border-style);
     border-top-width: 2px;
@@ -680,9 +640,6 @@
   .bg-\[\#100521\] {
     background-color: #100521;
   }
-  .bg-red-500 {
-    background-color: var(--color-red-500);
-  }
   .bg-transparent {
     background-color: transparent;
   }
@@ -695,13 +652,6 @@
       background-color: color-mix(in oklab, var(--color-white) 20%, transparent);
     }
   }
-  .bg-linear-45 {
-    --tw-gradient-position: 45deg;
-    @supports (background-image: linear-gradient(in lab, red, red)) {
-      --tw-gradient-position: 45deg in oklab;
-    }
-    background-image: linear-gradient(var(--tw-gradient-stops));
-  }
   .bg-linear-45\/oklch {
     --tw-gradient-position: 45deg;
     @supports (background-image: linear-gradient(in lab, red, red)) {
@@ -709,24 +659,10 @@
     }
     background-image: linear-gradient(var(--tw-gradient-stops));
   }
-  .bg-linear-90 {
-    --tw-gradient-position: 90deg;
-    @supports (background-image: linear-gradient(in lab, red, red)) {
-      --tw-gradient-position: 90deg in oklab;
-    }
-    background-image: linear-gradient(var(--tw-gradient-stops));
-  }
   .bg-linear-90\/oklch {
     --tw-gradient-position: 90deg;
     @supports (background-image: linear-gradient(in lab, red, red)) {
       --tw-gradient-position: 90deg in oklch;
-    }
-    background-image: linear-gradient(var(--tw-gradient-stops));
-  }
-  .bg-linear-180 {
-    --tw-gradient-position: 180deg;
-    @supports (background-image: linear-gradient(in lab, red, red)) {
-      --tw-gradient-position: 180deg in oklab;
     }
     background-image: linear-gradient(var(--tw-gradient-stops));
   }
@@ -744,6 +680,10 @@
   .bg-gradient-to-r {
     --tw-gradient-position: to right in oklab;
     background-image: linear-gradient(var(--tw-gradient-stops));
+  }
+  .from-\[\#1C1E32\] {
+    --tw-gradient-from: #1C1E32;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
   .from-\[\#2A049C\] {
     --tw-gradient-from: #2A049C;
@@ -780,12 +720,17 @@
     --tw-gradient-from: var(--color-purpleHero);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
-  .to-\[\#5F29FF\] {
-    --tw-gradient-to: #5F29FF;
+  .via-\[\#395B99\] {
+    --tw-gradient-via: #395B99;
+    --tw-gradient-via-stops: var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-via) var(--tw-gradient-via-position), var(--tw-gradient-to) var(--tw-gradient-to-position);
+    --tw-gradient-stops: var(--tw-gradient-via-stops);
+  }
+  .to-\[\#2D1D70\] {
+    --tw-gradient-to: #2D1D70;
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
-  .to-blueLogo {
-    --tw-gradient-to: var(--color-blueLogo);
+  .to-\[\#5F29FF\] {
+    --tw-gradient-to: #5F29FF;
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
   .to-blueLogo\/20 {
@@ -801,10 +746,6 @@
   }
   .to-darkPurpleAbout {
     --tw-gradient-to: var(--color-darkPurpleAbout);
-    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-  }
-  .to-purple {
-    --tw-gradient-to: var(--color-purple);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
   .to-purple\/50 {
@@ -896,9 +837,6 @@
   .pt-35 {
     padding-top: calc(var(--spacing) * 35);
   }
-  .pb-2 {
-    padding-bottom: calc(var(--spacing) * 2);
-  }
   .pb-2\.5 {
     padding-bottom: calc(var(--spacing) * 2.5);
   }
@@ -976,6 +914,10 @@
     --tw-leading: calc(var(--spacing) * 6);
     line-height: calc(var(--spacing) * 6);
   }
+  .leading-7 {
+    --tw-leading: calc(var(--spacing) * 7);
+    line-height: calc(var(--spacing) * 7);
+  }
   .leading-8 {
     --tw-leading: calc(var(--spacing) * 8);
     line-height: calc(var(--spacing) * 8);
@@ -1012,15 +954,16 @@
     --tw-font-weight: var(--font-weight-thin);
     font-weight: var(--font-weight-thin);
   }
+  .tracking-tighter {
+    --tw-tracking: var(--tracking-tighter);
+    letter-spacing: var(--tracking-tighter);
+  }
   .tracking-wide {
     --tw-tracking: var(--tracking-wide);
     letter-spacing: var(--tracking-wide);
   }
   .text-black {
     color: var(--color-black);
-  }
-  .text-purple {
-    color: var(--color-purple);
   }
   .text-slate-300 {
     color: var(--color-slate-300);
@@ -1034,30 +977,22 @@
   .italic {
     font-style: italic;
   }
-  .underline {
-    text-decoration-line: underline;
-  }
   .antialiased {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
+  .opacity-30 {
+    opacity: 30%;
+  }
   .shadow-lg {
     --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
   }
   .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
   .backdrop-blur-lg {
     --tw-backdrop-blur: blur(var(--blur-lg));
-    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-  }
-  .backdrop-filter {
     -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
     backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
   }
@@ -1311,6 +1246,11 @@
       height: 120px;
     }
   }
+  .sm\:h-\[180px\] {
+    @media (width >= 40rem) {
+      height: 180px;
+    }
+  }
   .sm\:w-\[50px\] {
     @media (width >= 40rem) {
       width: 50px;
@@ -1349,6 +1289,11 @@
   .sm\:w-\[150\%\] {
     @media (width >= 40rem) {
       width: 150%;
+    }
+  }
+  .sm\:w-\[180px\] {
+    @media (width >= 40rem) {
+      width: 180px;
     }
   }
   .sm\:w-\[250px\] {
@@ -1486,6 +1431,12 @@
       line-height: calc(var(--spacing) * 7);
     }
   }
+  .sm\:leading-8 {
+    @media (width >= 40rem) {
+      --tw-leading: calc(var(--spacing) * 8);
+      line-height: calc(var(--spacing) * 8);
+    }
+  }
   .sm\:leading-9 {
     @media (width >= 40rem) {
       --tw-leading: calc(var(--spacing) * 9);
@@ -1614,6 +1565,11 @@
       height: 100px;
     }
   }
+  .md\:h-\[230px\] {
+    @media (width >= 48rem) {
+      height: 230px;
+    }
+  }
   .md\:h-\[270px\] {
     @media (width >= 48rem) {
       height: 270px;
@@ -1632,6 +1588,11 @@
   .md\:w-\[120\%\] {
     @media (width >= 48rem) {
       width: 120%;
+    }
+  }
+  .md\:w-\[230px\] {
+    @media (width >= 48rem) {
+      width: 230px;
     }
   }
   .md\:w-\[278px\] {
@@ -1988,6 +1949,11 @@
       height: 140px;
     }
   }
+  .lg\:h-\[270px\] {
+    @media (width >= 64rem) {
+      height: 270px;
+    }
+  }
   .lg\:w-2\/4 {
     @media (width >= 64rem) {
       width: calc(2/4 * 100%);
@@ -2046,6 +2012,11 @@
   .lg\:w-\[140px\] {
     @media (width >= 64rem) {
       width: 140px;
+    }
+  }
+  .lg\:w-\[270px\] {
+    @media (width >= 64rem) {
+      width: 270px;
     }
   }
   .lg\:w-\[430px\] {
@@ -2363,6 +2334,11 @@
       height: 140px;
     }
   }
+  .xl\:h-\[300px\] {
+    @media (width >= 80rem) {
+      height: 300px;
+    }
+  }
   .xl\:w-5\/12 {
     @media (width >= 80rem) {
       width: calc(5/12 * 100%);
@@ -2391,6 +2367,11 @@
   .xl\:w-\[96px\] {
     @media (width >= 80rem) {
       width: 96px;
+    }
+  }
+  .xl\:w-\[300px\] {
+    @media (width >= 80rem) {
+      width: 300px;
     }
   }
   .xl\:w-\[600px\] {
@@ -2539,6 +2520,168 @@ img {
 }
 ::-webkit-scrollbar-thumb:hover {
   background: #5F4586;
+}
+#loader-wrapper {
+  opacity: 1;
+  visibility: visible;
+}
+#loader-wrapper.hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+@media (max-width: 768px) {
+  #loader-wrapper h1 {
+    -webkit-text-stroke: 1px #395B99;
+  }
+}
+#loader-wrapper h1 {
+  -webkit-text-stroke: 3px #395B99;
+}
+.snowflake {
+  --small: 3px;
+  --medium: 7px;
+  width: var(--small);
+  height: var(--small);
+  position: absolute;
+  background-color: #fff;
+  border-radius: 50%;
+  animation: snow 6s linear infinite, wind 10s ease-in-out infinite;
+  top: -2%;
+  left: 10%;
+}
+.snowflake:nth-child(2n + 1) {
+  width: var(--medium);
+  height: var(--medium);
+}
+.snowflake:nth-child(1) {
+  left: 5%;
+  animation-delay: 0s;
+}
+.snowflake:nth-child(2) {
+  left: 10%;
+  animation-delay: 1s;
+}
+.snowflake:nth-child(3) {
+  left: 15%;
+  animation-delay: 2s;
+}
+.snowflake:nth-child(4) {
+  left: 20%;
+  animation-delay: 0.5s;
+}
+.snowflake:nth-child(5) {
+  left: 25%;
+  animation-delay: 2.5s;
+}
+.snowflake:nth-child(6) {
+  left: 30%;
+  animation-delay: 1.5s;
+}
+.snowflake:nth-child(7) {
+  left: 35%;
+  animation-delay: 3s;
+}
+.snowflake:nth-child(8) {
+  left: 40%;
+  animation-delay: 2s;
+}
+.snowflake:nth-child(9) {
+  left: 45%;
+  animation-delay: 4s;
+}
+.snowflake:nth-child(10) {
+  left: 50%;
+  animation-delay: 3.5s;
+}
+.snowflake:nth-child(11) {
+  left: 55%;
+  animation-delay: 1s;
+}
+.snowflake:nth-child(12) {
+  left: 60%;
+  animation-delay: 2s;
+}
+.snowflake:nth-child(13) {
+  left: 65%;
+  animation-delay: 1.2s;
+}
+.snowflake:nth-child(14) {
+  left: 70%;
+  animation-delay: 3.1s;
+}
+.snowflake:nth-child(15) {
+  left: 75%;
+  animation-delay: 0.6s;
+}
+.snowflake:nth-child(16) {
+  left: 80%;
+  animation-delay: 1.7s;
+}
+.snowflake:nth-child(17) {
+  left: 85%;
+  animation-delay: 2.8s;
+}
+.snowflake:nth-child(18) {
+  left: 90%;
+  animation-delay: 3.3s;
+}
+.snowflake:nth-child(19) {
+  left: 95%;
+  animation-delay: 0.9s;
+}
+.snowflake:nth-child(20) {
+  left: 98%;
+  animation-delay: 1.1s;
+}
+.snowflake:nth-child(21) {
+  left: 3%;
+  animation-delay: 2.1s;
+}
+.snowflake:nth-child(22) {
+  left: 7%;
+  animation-delay: 2.6s;
+}
+.snowflake:nth-child(23) {
+  left: 13%;
+  animation-delay: 3.6s;
+}
+.snowflake:nth-child(24) {
+  left: 18%;
+  animation-delay: 4.2s;
+}
+.snowflake:nth-child(25) {
+  left: 22%;
+  animation-delay: 5s;
+}
+.snowflake:nth-child(26) {
+  left: 27%;
+  animation-delay: 4.7s;
+}
+.snowflake:nth-child(27) {
+  left: 33%;
+  animation-delay: 3.3s;
+}
+.snowflake:nth-child(28) {
+  left: 38%;
+  animation-delay: 4.5s;
+}
+.snowflake:nth-child(29) {
+  left: 43%;
+  animation-delay: 5.5s;
+}
+.snowflake:nth-child(30) {
+  left: 48%;
+  animation-delay: 4.9s;
+}
+@keyframes snow {
+  100% {
+    top: 100%;
+  }
+}
+@keyframes wind {
+  50% {
+    transform: translateX(120px);
+  }
 }
 @keyframes atom-rotate {
   0% {
@@ -3452,11 +3595,6 @@ input[type="checkbox"] {
   inherits: false;
   initial-value: 0 0 #0000;
 }
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @property --tw-blur {
   syntax: "*";
   inherits: false;
@@ -3607,7 +3745,6 @@ input[type="checkbox"] {
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
-      --tw-outline-style: solid;
       --tw-blur: initial;
       --tw-brightness: initial;
       --tw-contrast: initial;
