--- a/assets/src/output.css
+++ b/assets/src/output.css
@@ -438,6 +438,9 @@
   .h-10 {
     height: calc(var(--spacing) * 10);
   }
+  .h-16 {
+    height: calc(var(--spacing) * 16);
+  }
   .h-\[1px\] {
     height: 1px;
   }
@@ -506,6 +509,9 @@
   }
   .w-\[208px\] {
     width: 208px;
+  }
+  .w-\[240px\] {
+    width: 240px;
   }
   .w-\[250\%\] {
     width: 250%;
@@ -633,6 +639,9 @@
   }
   .border-white {
     border-color: var(--color-white);
+  }
+  .bg-\[\#1c1e32\] {
+    background-color: #1c1e32;
   }
   .bg-\[\#9747FF\] {
     background-color: #9747FF;
@@ -797,6 +806,9 @@
   }
   .px-7 {
     padding-inline: calc(var(--spacing) * 7);
+  }
+  .px-\[20px\] {
+    padding-inline: 20px;
   }
   .px-\[70px\] {
     padding-inline: 70px;
@@ -2986,26 +2998,17 @@ img {
   font-weight: 600;
   color: transparent;
 }
-.live-hero {
-  width: 100%;
-  height: 64px;
-  background-color: #1c1e32;
-  display: flex;
-  align-items: center;
-  overflow: hidden;
-  white-space: nowrap;
+.live-track {
+  width: calc(240px * 12);
+  animation: ticker 10s linear infinite;
 }
-@keyframes tickerMove {
-  from {
-    transform: translateX(0);
+@keyframes ticker {
+  0% {
+    transform: translateX(0%);
   }
-  to {
-    transform: translateX(-100%);
+  100% {
+    transform: translateX(-50%);
   }
-}
-.live-hero .live {
-  animation: tickerMove 1.5s linear infinite;
-  -webkit-animation: tickerMove 1.5s linear infinite;
 }
 .glow-purple {
   filter: drop-shadow(0px 0px 25px rgba(138, 92, 204, 0.6));
