--- a/assets/src/input.css
+++ b/assets/src/input.css
@@ -701,6 +701,79 @@ img {
 }
 /* SLIDER DOKUMENTASI */
 
+/* Button BackToHIMTIKA */
+  .Btn {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 45px;
+    height: 45px;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    transition-duration: .3s;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+    background-color: rgb(255, 255, 255);
+  }
+
+  /* plus sign */
+  .sign {
+    width: 100%;
+    transition-duration: .3s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .sign svg {
+    width: 17px;
+  }
+
+  .sign svg path {
+    fill: white;
+  }
+  /* text */
+  .text {
+    /* position: absolute;
+    right: 0%; */
+    width: 0%;
+    opacity: 0;
+    color: rgba(255, 255, 255);
+    background-color: rgb(10, 198, 194);
+    transition-duration: .3s;
+  }
+  /* hover effect on button width */
+  .Btn:hover {
+    width: 160px;
+    border-radius: 40px;
+    transition-duration: .3s;
+    box-shadow: 0px 0px 15px 1px rgba(11, 223, 219);
+  }
+
+  .Btn:hover .sign {
+    width: 35%;
+    transition-duration: .3s;
+    padding-left: 5px;
+  }
+  /* hover effect button's text */
+  .Btn:hover .text {
+    opacity: 1;
+    width: 65%;
+    transition-duration: .3s;
+    /* padding-right: 5px; */
+  }
+  /* button click effect*/
+  .Btn:active {
+    transform: translate(2px ,2px);
+  }
+
+  .himtika-shadow {
+    text-shadow: 0px -2px 0px rgba(11, 223, 219);
+  }
+/* Button BackToHIMTIKA */
+
 /* FAQ Section */
 .faq-grid {
   display: grid;
