--- a/assets/src/output.css
+++ b/assets/src/output.css
@@ -270,6 +270,9 @@
   .right-7 {
     right: calc(var(--spacing) * 7);
   }
+  .right-9 {
+    right: calc(var(--spacing) * 9);
+  }
   .right-10 {
     right: calc(var(--spacing) * 10);
   }
@@ -907,6 +910,13 @@
   }
   .text-\[16px\] {
     font-size: 16px;
+  }
+  .text-\[18px\] {
+    font-size: 18px;
+  }
+  .leading-3 {
+    --tw-leading: calc(var(--spacing) * 3);
+    line-height: calc(var(--spacing) * 3);
   }
   .leading-4 {
     --tw-leading: calc(var(--spacing) * 4);
@@ -3170,6 +3180,63 @@ img {
   opacity: 1;
   transform: translateZ(10px);
   transition: all 0.8s;
+}
+.Btn {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 45px;
+  height: 45px;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  transition-duration: .3s;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+  background-color: rgb(255, 255, 255);
+}
+.sign {
+  width: 100%;
+  transition-duration: .3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.sign svg {
+  width: 17px;
+}
+.sign svg path {
+  fill: white;
+}
+.text {
+  width: 0%;
+  opacity: 0;
+  color: rgba(255, 255, 255);
+  background-color: rgb(10, 198, 194);
+  transition-duration: .3s;
+}
+.Btn:hover {
+  width: 160px;
+  border-radius: 40px;
+  transition-duration: .3s;
+  box-shadow: 0px 0px 15px 1px rgba(11, 223, 219);
+}
+.Btn:hover .sign {
+  width: 35%;
+  transition-duration: .3s;
+  padding-left: 5px;
+}
+.Btn:hover .text {
+  opacity: 1;
+  width: 65%;
+  transition-duration: .3s;
+}
+.Btn:active {
+  transform: translate(2px ,2px);
+}
+.himtika-shadow {
+  text-shadow: 0px -2px 0px rgba(11, 223, 219);
 }
 .faq-grid {
   display: grid;
